# smodal

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MIMO.md  README.md  analysis_method.ipynb  app.py  critical_design_review.md  development_goal.md  mac.md  modal_analysis.md  pyproject.toml  requirements.txt  scrap.py  todo.md  wireframe_plan.md  wireframe_visualizer.md
.github/workflows/: ci.yml
.streamlit/: config.toml
core/: brand.py  data_loader.py  ema_charts.py  ema_pipeline.py  geometry.py  mimo.py  mimo_page.py  plots.py  preprocess.py  simo_page.py  spectral.py  sysid.py  uff_writer.py
data/input/: sample_3ch.csv  sample_MIMO_asym.csv  sample_MIMO_sym.csv  val_cantilever_impulse.csv  val_cantilever_impulse_clean.csv
data/input/cantilever_beam/: cantilever_modes.f06  cantilever_wireframe.bdf
data/input/example_model/: experimental_wireframe.bdf  val_cantilever_modes.bdf  val_cantilever_modes.f06
data/output/: Mode_identification_log.json  SIMO_log.json  Test_2_log.json  Test_3_log.json  Test_4_log.json  Test_PSD_log.json  Test_log.json
docs/: algorithms.md  code_review.md  data_model.md  methods.ipynb  oma.md  release_process.md  tutorial_cantilever.ipynb  wireframe.md  workflow_pages.md
pages/: 1_Time_History.py  2_FFT.py  3_Spectral_Analysis.py  4_OMA.py  4_SIMO.py  5_Integration.py  5_MIMO.py  6_MAC.py  6_OMA.py  7_MAC.py  7_Wireframe.py  8_Method.py  8_Wireframe.py  9_Method.py
scripts/: generate_cantilever_reference.py
tests/: conftest.py  test_brand.py  test_cantilever_regression.py  test_data_loader.py  test_ema_pipeline.py  test_geometry.py  test_mimo.py  test_page_smoke.py  test_plots.py  test_preprocess.py  test_spectral.py  test_sysid.py  test_tools.py  test_uff_writer.py
tools/: README.md  channel_math.py  downsample.py  format_converter.py  time_sync.py
