[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "smodal"
version = "0.1.0"
description = "Streamlit app for experimental and operational modal analysis (EMA / OMA): SIMO, MIMO, FDD, MAC, 3-D mode shapes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.50",
    "pandas>=2.3",
    "numpy>=2.0",
    "scipy>=1.13",
    "plotly>=6.7",
    "nbformat>=5.9",
]
license = {text = "MIT"}
authors = [
    {name = "Sean O'Meara", email = "sean.c.omeara74@gmail.com"},
]
keywords = [
    "modal-analysis",
    "ema",
    "oma",
    "structural-dynamics",
    "system-identification",
    "streamlit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[tool.ruff]
line-length = 120
extend-exclude = [".venv", "data", "docs/methods.ipynb"]

[tool.ruff.lint]
# E   pycodestyle errors
# F   pyflakes
# W   pycodestyle warnings
# I   isort (import sorting)
# UP  pyupgrade (modernise syntax for the target Python)
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E402",  # import not at top — pages must call st.set_page_config() before other imports
    "E501",  # long lines — matplotlib/plotly trace definitions get unavoidably wide
    "E741",  # short names (I, A, L, w, ...) are standard in signal-processing / FEA notation
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]
